--- a/flask/static/style.css
+++ b/flask/static/style.css
@@ -1,3 +1,7 @@
+* {
+    font-family: Arial, Helvetica, sans-serif;
+}
+
 body {
     margin: auto;
     width: 750px;
@@ -46,13 +50,13 @@ footer {
 }
 
 .alert {
-  position: relative;
-  padding: 0.75rem 1.25rem;
-  margin-bottom: 1rem;
-  border: 1px solid #b8daff;
-  border-radius: 0.25rem;
-  color: #004085;
-  background-color: #cce5ff;
+    position: relative;
+    padding: 0.75rem 1.25rem;
+    margin-bottom: 1rem;
+    border: 1px solid #b8daff;
+    border-radius: 0.25rem;
+    color: #004085;
+    background-color: #cce5ff;
 }
 
 .error {
