--- a/flask/templates/config.html
+++ b/flask/templates/config.html
@@ -2,22 +2,22 @@
 
 {% block content %}
 <h1>Config</h1>
-    <table>
-        <thead>
-            <tr>
-                {% for col in column_names %}
+<table>
+    <thead>
+        <tr>
+            {% for col in columns %}
                 <th>{{col}}</th>
-                {% endfor %}
-            </tr>
-        </thead>
-        <tbody>
-            {% for row in row_data %}
-            <tr>
-                {% for col, row_ in zip(column_names, row) %}
-                <td>{{row_}}</td>
-                {% endfor %}
-            </tr>
             {% endfor %}
-        </tbody>
-    </table>
+        </tr>
+    </thead>
+    <tbody>
+        {% for row in data %}
+        <tr>
+            {% for item in row %}
+                <td>{{item}}</td>
+            {% endfor %}
+        </tr>
+        {% endfor %}
+    </tbody>
+</table>
 {% endblock %}
