--- a/flask/templates/edit.html
+++ b/flask/templates/edit.html
@@ -1,11 +1,11 @@
 {% extends 'base.html' %}
 
 {% block content %}
-<h2>Modify campaign</h2>
+<h2>Edit campaign</h2>
 
 <form method="POST" action="">
     <p>{{ form.title.label }} {{ form.title(size=20) }}</p>
     <p>Start {{ form.start_date(class='datepicker')}} {{form.hidden_tag()}}</p>
-    <p><input type="submit" value="Go"></p>
+    <p><input type="submit" value="save"></p>
 </form>
 {% endblock %}
