--- a/flask/templates/base.html
+++ b/flask/templates/base.html
@@ -32,8 +32,8 @@
 </main>
 <footer>
     {% block footer %}
-        <small> &copy; 2021 <a>Holger</a> /
-            <a href="https://github.com/munich-ml/raspi_walli/" title="Raspi Walli project on GitHub">GitHub</a>
+        <small> find Raspi_Walli on 
+            <a href="https://github.com/munich-ml/raspi_walli/">GitHub</a>
         </small>
     {% endblock %}
 </footer>
