--- a/flask/templates/history.html
+++ b/flask/templates/history.html
@@ -19,7 +19,7 @@
         {% for cpn in campaigns %}
         <tr>
             <td>
-                <a href="edit/{{cpn.id}}/">
+                <a href="edit/{{cpn.id}}/" title="click to edit campaign {{cpn.id}}">
                     <button type="button">{{cpn.id}}</button>
                 </a>
             </td>
