--- a/flask/templates/edit.html
+++ b/flask/templates/edit.html
@@ -4,8 +4,10 @@
 <h2>Edit campaign</h2>
 
 <form method="POST" action="">
-    <p>{{ form.title.label }} {{ form.title(size=20) }}</p>
-    <p>Start {{ form.start_date(class='datepicker')}} {{form.hidden_tag()}}</p>
+    {{form.hidden_tag()}}
+    <p>{{ form.title.label }} {{ form.title }}</p>
+    <p>Start {{ form.start_date}} {{ form.start_time}}</p>
+    <p>End {{ form.end_date}} {{ form.end_time}}</p>
     <p><input type="submit" value="save"></p>
 </form>
 {% endblock %}
