--- a/flask/templates/edit.html
+++ b/flask/templates/edit.html
@@ -5,9 +5,19 @@
 
 <form method="POST" action="">
     {{form.hidden_tag()}}
-    <p>{{ form.title.label }} {{ form.title }}</p>
-    <p>Start {{ form.start_date}} {{ form.start_time}}</p>
-    <p>End {{ form.end_date}} {{ form.end_time}}</p>
-    <p><input type="submit" value="save"></p>
+    <p>id {{ form.id }}</p>
+    <p>active {{ form.active }}</p>
+    <p>title {{ form.title }}</p>
+    <p>start {{ form.start_date}} {{ form.start_time}}</p>
+    <p>end {{ form.end_date}} {{ form.end_time}}</p>
+    <p>measure Walli {{ form.measure_walli }}</p>
+    <p>measure light {{ form.measure_light }}</p>
+    <p>
+        <input type="submit" name="todo" value="save">
+        <input type="submit" name="todo" value="delete">
+        <a href={{ url_for("history") }} title="go back without changes">
+            <button type="button">abort</button>
+        </a>
+    </p>
 </form>
 {% endblock %}
