commit new campaigns

--- a/flask/templates/edit.html
+++ b/flask/templates/edit.html
@@ -10,6 +10,7 @@
     <p>title {{ form.title }}</p>
     <p>start {{ form.start_date}} {{ form.start_time}}</p>
     <p>end {{ form.end_date}} {{ form.end_time}}</p>
+    <p title="interval in seconds">interval {{ form.interval }}</p>
     <p>measure Walli {{ form.measure_walli }}</p>
     <p>measure light {{ form.measure_light }}</p>
     <p>
