renaming history --> campaigns

--- a/flask/templates/edit.html
+++ b/flask/templates/edit.html
@@ -16,7 +16,7 @@
     <p>
         <input type="submit" name="todo" value="save">
         <input type="submit" name="todo" value="delete">
-        <a href={{ url_for("history") }} title="go back without changes">
+        <a href={{ url_for("campaigns") }} title="go back without changes">
             <button type="button">abort</button>
         </a>
     </p>
