--- a/flask/templates/base.html
+++ b/flask/templates/base.html
@@ -19,7 +19,7 @@
         <ul>
             <li><a href="{{ url_for('index') }}">Home</a></li>
             <li><a href="{{ url_for('config') }}">Config</a></li>
-            <li><a href="{{ url_for('history') }}">History</a></li>
+            <li><a href="{{ url_for('campaigns') }}">Campaigns</a></li>
         </ul>
     {% endblock %}
 </nav>
