--- a/flask/templates/base.html
+++ b/flask/templates/base.html
@@ -20,6 +20,7 @@
             <li><a href="{{ url_for('index') }}">Home</a></li>
             <li><a href="{{ url_for('config') }}">Config</a></li>
             <li><a href="{{ url_for('campaigns') }}">Campaigns</a></li>
+            <li><a href="{{ url_for('data') }}">Data</a></li>
         </ul>
     {% endblock %}
 </nav>
