--- a/flask/templates/data.html
+++ b/flask/templates/data.html
@@ -2,10 +2,9 @@
 
 {% block content %}
 <h2>data page</h2>
-    <div id='chart' class='chart'></div>
+    <div id='chart42'></div>
 <script src='https://cdn.plot.ly/plotly-latest.min.js'></script>
 <script type='text/javascript'>
-    var graphs = {{graphJSON | safe}};
-    Plotly.plot('chart', graphs, {});
+    Plotly.plot('chart42', {{graphJSON | safe}}, {});
 </script>
 {% endblock %}
