--- a/flask/templates/data.html
+++ b/flask/templates/data.html
@@ -1,10 +1,7 @@
 {% extends 'base.html' %}
 
 {% block content %}
-<h2>data page</h2>
-<div id='chart42'></div>
-<script src='https://cdn.plot.ly/plotly-latest.min.js'></script>
-<script type='text/javascript'>
-    Plotly.plot('chart42', {{graphJSON | safe}}, {});
-</script>
+
+<p>data page</p>
+
 {% endblock %}
