home prepared for other years

--- a/flask/templates/base.html
+++ b/flask/templates/base.html
@@ -17,7 +17,7 @@
 <nav>
     {% block nav %}
         <ul>
-            <li><a href="{{ url_for('index') }}">Home</a></li>
+            <li><a href="{{ url_for('home') }}">Home</a></li>
             <li><a href="{{ url_for('config') }}">Config</a></li>
             <li><a href="{{ url_for('campaigns') }}">Campaigns</a></li>
             <li><a href="{{ url_for('data') }}">Data</a></li>
