--- a/flask/templates/home.html
+++ b/flask/templates/home.html
@@ -2,6 +2,9 @@
 
 {% block content %}
 <h2>Walli home</h2>
+<hr>
+<h2>Hourly statistics of {{year}}</h2>
+<p> Also available for {% for y in other_years %}{{y}} {% endfor %}</p>
 
 {% for plot_name, plot_json in plots.items() %}
     <div id={{plot_name}}></div>
