ajax DataTable with campaign_id filter

--- a/flask/templates/config.html
+++ b/flask/templates/config.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 
 {% block content %}
-<h2>Config</h2>
+<h2>Wallbox config registers</h2>
 <table>
     <thead>
         <tr>
