--- a/flask/templates/data.html
+++ b/flask/templates/data.html
@@ -1,8 +1,10 @@
 {% extends 'base.html' %}
 
 {% block content %}
-<p>data page</p>
-<table id="data" class="table table-striped">
+<p>data page for campaign_id={{campaign_id}}</p>
+<hr>
+<h2>Light sensor data</h2>
+<table id="light" class="table table-striped">
     <thead>
         <tr>
             <th>datetime</th>
@@ -12,16 +14,19 @@
     <tbody>
     </tbody>
 </table>
+<h2>Walli data</h2>
+<p>none</p>
+
 {% endblock %}
 
 {% block scripts %}
 <script>
     $(document).ready(function () {
-        $('#data').DataTable({
-            ajax: '/api/data',
+        $('#light').DataTable({
+            ajax: '/api/data/light/' + {{campaign_id}},
             columns: [
-                {data: 'datetime'},
-                {data: 'lux'}
+                {'data': 'datetime'},
+                {'data': 'lux'}
             ],
         });
     });
