--- a/flask/templates/base.html
+++ b/flask/templates/base.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <title>{% block title %}Walli{% endblock %}</title>
-    <link rel="icon" type="image/x-icon" href="{{ url_for('static', filename='favicon.ico') }}">
+    <link rel="icon" type="image/x-icon" href="{{ url_for('static', filename='walli.ico') }}">
     <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='style.css' ) }}">
 </head>
 <body>
