first config form trial

--- a/flask/templates/config.html
+++ b/flask/templates/config.html
@@ -20,4 +20,14 @@
         {% endfor %}
     </tbody>
 </table>
+
+<hr>
+<form method="POST" action="">
+    {{form.hidden_tag()}}
+    <p>
+        Overwrite register adr {{ form.adr }} to value XXX
+        <input type="submit" value="write">
+    </p>
+</form>
+
 {% endblock %}
